# GSPN

./: MANIFEST.in  README.md  USAGE.md  example_usage.py  pyproject.toml  setup.py
gspn/: __init__.py  core.py
ops/gaterecurrent/: gaterecurrent2dnoind.py
